objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_State__c</fullName>
        <label>Invoice State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Street_1__c</fullName>
        <label>Invoice Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Zip__c</fullName>
        <label>Invoice Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Apex badge exercise</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>invoice_City__c</fullName>
        <label>invoice City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>